Được tạo bằng Colaboratory

--- a/techniques_bs.ipynb
+++ b/techniques_bs.ipynb
@@ -111,16 +111,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4eb5108d-cc44-49f8-b96f-45a601014a50"
+        "outputId": "4bec97a3-9bd3-48d7-ed85-a48956c3cd0e"
       },
       "source": [
         "l = ['meo','mẻo','mèo','ngoao']\r\n",
         "print('CHuỗi trước khi edit:',l)\r\n",
-        "print('Phần tử đầu tiên:',l[0])\r\n",
-        "l.pop(0)\r\n",
+        "x = l.pop(0)\r\n",
+        "print('Phần tử đầu tiên:',x)\r\n",
         "print('Chuỗi sau khi edit:',l)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
