Được tạo bằng Colaboratory

--- a/techniques_bs.ipynb
+++ b/techniques_bs.ipynb
@@ -157,7 +157,7 @@
         "\r\n",
         "html = urlopen(url)\r\n",
         "bs = BeautifulSoup(html, 'html.parser')\r\n",
-        "for link in bs.find_all():\r\n",
+        "for link in bs.find_all(\"a\"):\r\n",
         "    if 'href' in link.attrs:\r\n",
         "        print(link.attrs['href'])"
       ],
